--- a/leaderboard.css
+++ b/leaderboard.css
@@ -177,7 +177,7 @@ body {
   text-align: center;
 }
 
-.buttons {
+.button-container {
   padding-top: 20px;
   width: 100%;
   display: inline-block;
